[package]
name = "day4"
version = "0.1.0"
authors = ["Lan <lanhikarixx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator = "0.6.19"
rand = "0.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "password_search"
harness = false
